# yango

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  manage.py  pyproject.toml  requirements.txt  wait_for_db.py
home/: urls.py  views.py
post/: admin.py  models.py  urls.py
post/api/v1/: serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_options.py
static/css/: styles.css
templates/: base.html
templates/home/: home.html
templates/post/: post_list.html
yango/: asgi.py  settings.py  urls.py  wsgi.py
