[tool.poetry]
name = "yango"
version = "1.0.0"
description = ""
authors = ["remigio furini <remifurini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.0.6"
mysqlclient = "2.2.4"
djangorestframework = "3.15.1"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
